.title-headings, flex-basis: auto에 의해 너비 결정, 피그마 디자인을 맞추기 위해 디자이너가 의도한 줄바꿈을 <br> 요소로 강제, 피그마의 디자인을 따라 min-width: 280px 설정. (내부 텍스트의 양이 작아도 피그마 디자인을 유지할 수 있게

--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ h1, h2, h3, h4, h5, h6 {
   /* 내부 타이틀 텍스트 만큼 너비가 조정되게! */
   flex-basis: auto;
 
+  /* 최소 사이즈 규정 : 280px보다 더 작아지지 않게 limit 설정 */
+  min-width: 280px;
 
   /*
     color는 CSS Variable 이용 가능.
