css variable의 사용(colors), :root 기준에서의 폰트 사이즈인 rm 단위 사용

--- a/style.css
+++ b/style.css
@@ -9,9 +9,16 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: unset;
 }
 
+/* Variables */
+:root {
+  /* Colors */
+  --color-white: #fff;
+}
+
 /* Typography */
 :root {
   font-family: "Montserrat", sans-serif;
+  font-size: 62.5%; /* 브라우저 기본 폰트 사이즈 설정인 16px의 62.5% -> 10px */
 }
 
 /* Layouts */
@@ -64,12 +71,15 @@ h1, h2, h3, h4, h5, h6 {
   /* 최소 사이즈 규정 : 280px보다 더 작아지지 않게 limit 설정 */
   min-width: 280px;
 
+  /* 피그마 상에는 44px이지만, line-height는 기본적으로 폰트 사이즈에 유동적인게 일반적임. */
+  line-height: 1.1; /* font-size: 40px 기준에서 44px로 계산 */
+
   /*
     color는 CSS Variable 이용 가능.
     font-size는 :root의 font-size를 기준으로 설정 가능 -> rem
   */
-  color: white;
-  font-size: 40px;
+  color: var(--color-white);
+  font-size: 4rem;
 }
 
 .title-description {
