--- a/style.css
+++ b/style.css
@@ -139,12 +139,25 @@ body {
 
 .panel-cover {
   box-shadow: inset 0 0 20px red;
-  /* 고정 너비를 가진다! */
-  width: 280px;
+
+  /* 고정 너비 */
+  width: 280px; /* flex-basis: auto가 280px로 계산 됨. 또한 min-width: auto가 280px로 계산된다. */
 }
 
 .panel-contents {
   box-shadow: inset 0 0 20px blue;
-  /* 가변 너비를 가진다! */
-  flex-grow: 1;
+
+  /* 가변 너비 */
+
+  /* flex-grow 비율만으로 너비 조정 */
+  flex-basis: 0;
+  
+  /* 내부 콘텐츠 너비와 관계없이 너비 조정 */
+  flex-grow: 1; 
+  
+  /* 
+    min-width: auto; 가 싫어서 0으로 정의 
+    min-width: auto; -> 내부 콘텐츠 크기로 min-width가 강제로 설정된다.
+  */
+  min-width: 0;
 }
