.list는 이제 common component, 요구 조건에 의해 네모 모양의 목록이 더 필요하다면, type_square 클래스 추가하여 관리

--- a/style.css
+++ b/style.css
@@ -73,6 +73,10 @@ body {
   flex-shrink: 0;
 }
 
+.list.type_square li::before {
+  border-radius: 0;
+}
+
 /* Components */
 /* 시각적으로 보여지는 공통 분모 -> 템플릿 구성 */
 .section {
