--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
   box-shadow: inset 0 0 20px blue;
   max-width: 1080px;
   margin: 0 auto;
+  padding: 0 30px;
 }
 
 .l_gap_row {
@@ -175,6 +176,8 @@ body {
   /* 고정 너비 */
   width: 280px; /* flex-basis: auto가 280px로 계산 됨. 또한 min-width: auto가 280px로 계산된다. */
 }
+
+.pa
 
 .panel-contents {
   box-shadow: inset 0 0 20px blue;
