panel-cover가 고정 너비였지만 실제로 창 크기를 줄여보니 더 중요한 콘텐츠인 panel-contents의 크기가 너무 작더라 (panel-cover가 고정이니까 생기는 문제). 그래서 flex-basis 값을 조절하여 적절한 시기에 panel-cover의 너비가 조정되게 만듦.

--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ body {
 /* Layouts */
 /* 공통으로 활용하는 레이아웃 클래스. 가로 기준에서 중앙 정렬만 담당 */
 .l_wrapper {
-  box-shadow: inset 0 0 20px blue;
   max-width: 1080px;
   margin: 0 auto;
   padding: 0 30px;
@@ -101,25 +100,20 @@ body {
 }
 
 .section-header {
-  box-shadow: inset 0 0 4px purple;
   margin-bottom: 100px;
 }
 
 .section-contents {
-  box-shadow: inset 0 0 4px purple;
+
 }
 
 .title {
-  box-shadow: inset 0 0 20px gold;
-
   /* title 하위 가로 배치 */
   display: flex;
   align-items: center;
 }
 
 .title-headings {
-  box-shadow: inset 0 0 20px darkcyan;
-
   /* 내부 타이틀 텍스트 만큼 너비가 조정되게! */
   flex-basis: auto;
 
@@ -138,8 +132,6 @@ body {
 }
 
 .title-description {
-  box-shadow: inset 0 0 20px orangered;
-
   /* 가장 많은 텍스트가 추가 될 가능성이 있음. 가장 넓은 영역으로 잡음. 커질 수 있는 크기 제한을 검*/
   flex-grow: 1;
   max-width: 582px; /* 피그마에서 온 사이즈 */
@@ -225,8 +217,9 @@ body {
 
   /* 가변 너비 */
 
-  /* flex-grow 비율만으로 너비 조정 */
-  flex-basis: 0;
+  /* flex-grow 비율만으로 너비 조정 => auto */
+  /* flex-grow: 500px; 임의의 설정 값으로 동작 변경 -> 창 크기가 작아졌을 때 적절한 시기에 panel-cover의 width: 280px; 값을 flex-shrink: 1; 에 의해 수축시킬 수 있음. */
+  flex-basis: 500px;
   
   /* 내부 콘텐츠 너비와 관계없이 너비 조정 */
   flex-grow: 1; 
@@ -236,6 +229,11 @@ body {
     min-width: auto; -> 내부 콘텐츠 크기로 min-width가 강제로 설정된다.
   */
   min-width: 0;
+
+  /*
+    flex-basis, min-width 지정하기 싫다면
+    width: 500px; flex-grow: 1;
+  */
 
   padding: 16px 22px 22px;
 }
