--- a/style.css
+++ b/style.css
@@ -167,6 +167,10 @@ body {
   color: #111;
 }
 
+.panel:nth-child(even) {
+  flex-direction: row-reverse;
+}
+
 .panel-cover {
   box-shadow: inset 0 0 20px red;
 
