--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ img {
   vertical-align: top;
 }
 
+
+
 /* Variables */
 :root {
   /* Colors */
@@ -111,6 +113,18 @@ body {
   /* title 하위 가로 배치 */
   display: flex;
   align-items: center;
+
+  --color-foreground: currentColor;
+  --color-underline: orangered;
+}
+
+.title.theme_purple {
+  --color-foreground: var(--color-white);
+  --color-underline: orangered;
+}
+
+.title.theme_white {
+  --color-underline: var(--color-white);
 }
 
 .title-headings {
@@ -127,8 +141,12 @@ body {
     color는 CSS Variable 이용 가능.
     font-size는 :root의 font-size를 기준으로 설정 가능 -> rem
   */
-  color: var(--color-white);
+  color: var(--color-foreground);
   font-size: 4rem;
+}
+
+.title-headings strong {
+  box-shadow: inset 0 -0.6em 0 0 var(--color-underline);
 }
 
 .title-description {
